@@ -69,6 +69,8 @@
 		case MA_CritOper_IsGreaterThan:			operatorString = @"is greater than"; break;
 		case MA_CritOper_IsLessThanOrEqual:		operatorString = @"is less than or equal to"; break;
 		case MA_CritOper_IsGreaterThanOrEqual:	operatorString = @"is greater than or equal to"; break;
+		case MA_CritOper_HasPhrase:				operatorString = @"has phrase"; break;
+		case MA_CritOper_NotHasPhrase:			operatorString = @"does not have phrase"; break;
 	}
 	return operatorString;
 }
@@ -111,6 +113,8 @@
 		[NSNumber numberWithInt:MA_CritOper_IsGreaterThanOrEqual],
 		[NSNumber numberWithInt:MA_CritOper_Under],
 		[NSNumber numberWithInt:MA_CritOper_NotUnder],
+		[NSNumber numberWithInt:MA_CritOper_HasPhrase],
+		[NSNumber numberWithInt:MA_CritOper_NotHasPhrase],
 		nil];
 }
 
