@@ -45,5 +45,4 @@ Wishlist
 - Manual sorting of folders or arrange folders by other means.
 - Cache full XML for original article and return via Applescript.
 - Show warning icon on collapsed group folder if any sub-folders have warnings.
-- Allow smart folder criteria to match the beginning and end of strings as well as 'contains'.
 - Mix conditionals within smart folders.
